<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Money Management</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Wallet">0</string>
    <string name="setWalletInitial">Starting Money in Wallet</string>
    <string name="Budget">5</string>
    <string name="back">Back</string>
	<color name="red">#FF5500</color>
	<color name="white">#FFFFFF</color>
	<color name="blue">#00BFFF</color>
	<string name="recent_purchases">RECENT PURCHASES</string>
	<string name="budget_status">Budget Status</string>
	<string name="purchases_summary">Purchases Summary</string>
	<string name="wallet_summary">Wallet Summary</string>
	<string name="settings">SETTINGS</string>
	<string name="view_all_plans">VIEW ALL PLANS</string>
	<string name="your_budget">Your Budget</string>
	<string name="your_wallet">Your Wallet</string>
	<color name="green">#2EFE2E</color>
</resources>