<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smm_bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	
    <Button
        android:id="@+id/recentpurchacesbutton1"
        style="@style/btnStyleBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/recent_purchases" />

    <TextView
        android:id="@+id/messagetextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settingsbutton1"
        android:layout_marginBottom="14dp"
        android:layout_toRightOf="@+id/settingsbutton1"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/settingsbutton1"
        style="@style/btnStyleBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/recentpurchacesbutton1"
        android:layout_alignBottom="@+id/recentpurchacesbutton1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/WalletView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/settingsbutton1"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/Wallet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/BudgetView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/WalletView1"
        android:layout_alignBottom="@+id/WalletView1"
        android:layout_alignLeft="@+id/recentpurchacesbutton1"
        android:layout_marginLeft="50dp"
        android:text="@string/Budget"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/viewAllPlansButton"
        style="@style/btnStyleBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BudgetView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/view_all_plans" />

    <ViewAnimator
        android:id="@+id/viewAnimator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recentpurchacesbutton1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/viewAllPlansButton"
        android:padding="12dp" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/analyse_purchases_main2" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/budget_status_custom_layout" />
    </ViewAnimator>

    <com.example.studentmoneymanagement.CustomTextView
        android:id="@+id/customTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recentpurchacesbutton1"
        android:layout_alignTop="@+id/customTextView1"
        android:layout_marginLeft="17dp"
        android:text="@string/your_budget"
        studentmoneymanagement.fontName="Roboto-Light.ttf"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.example.studentmoneymanagement.CustomTextView
        android:id="@+id/customTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BudgetView1"
        android:layout_alignParentLeft="true"
        android:text="@string/your_wallet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>